# playwright-smart-reporter

./: .gitignore  .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json
example/: playwright-blob.config.ts  playwright-merge.config.ts  playwright-premium.config.ts  playwright.config.ts
keys/: public.pem
python/: .gitignore  DEVELOPMENT.md  README.md  SETUP_COMPLETE.md  pyproject.toml
python/examples/: run_example.py
python/playwright_smart_reporter_python/: __init__.py  bridge.py  converter.py  plugin.py
python/scripts/: bundle_dist.py
python/tests/: test_bridge.py  test_converter.py  test_plugin.py
specs/: 2026-02-23-pro-tier.md
src/: merge-history.ts  premium-integration.test.ts  smart-reporter.ts  types.ts
src/ai/: prompt-builder.test.ts
src/analyzers/: ai-analyzer-config.test.ts  ai-analyzer.test.ts  ai-analyzer.ts  flakiness-analyzer.test.ts  flakiness-analyzer.ts
src/cloud/: uploader.test.ts  uploader.ts
src/collectors/: attachment-collector.test.ts  history-collector.test.ts  history-collector.ts  network-collector.ts  step-collector.test.ts
src/gates/: quality-gate-evaluator.ts
src/generators/: card-generator.ts  chart-generator.ts  comparison-generator.ts  executive-pdf.ts  gallery-generator.ts  generators.test.ts  html-generator.ts  icon-provider.ts  json-exporter.test.ts  json-exporter.ts  junit-exporter.test.ts  junit-exporter.ts  pdf-exporter.test.ts  pdf-exporter.ts  theme-branding.test.ts  trace-viewer-generator.ts
src/license/: generate-license.ts  index.ts  license-adversarial.test.ts  license-validator.test.ts
src/live/: index.ts  live-dashboard.test.ts  live-dashboard.ts  live-writer.test.ts  live-writer.ts  sse-handler.ts
src/notifiers/: custom-webhook-notifier.ts  email-notifier.ts  notification-boundary.test.ts  notification-manager.test.ts  notification-manager.ts  pagerduty-notifier.ts  slack-notifier.ts  teams-notifier.ts
src/utils/: ci-detector.test.ts  ci-detector.ts  index.ts  markdown-lite.ts
