[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-smart-reporter-python"
version = "1.0.8"
description = "Python bridge for Playwright Smart Reporter - AI-powered test analysis and reporting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Gary Parker" }
]
keywords = [
    "playwright",
    "pytest",
    "testing",
    "reporter",
    "html-reporter",
    "ai",
    "test-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pytest>=7.4",
    "pytest-json-report>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest-playwright",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/qa-gary-parker/playwright-smart-reporter"
Repository = "https://github.com/qa-gary-parker/playwright-smart-reporter"
Issues = "https://github.com/qa-gary-parker/playwright-smart-reporter/issues"

[project.entry-points.pytest11]
playwright_smart_reporter = "playwright_smart_reporter_python.plugin"

[tool.setuptools.packages.find]
include = ["playwright_smart_reporter_python*"]

[tool.setuptools.package-data]
playwright_smart_reporter_python = [
    "py.typed",
    "_bundled_dist/**/*.js",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
